--- a/app/views/iwiw_users/_call_iwiw_api.html.erb
+++ b/app/views/iwiw_users/_call_iwiw_api.html.erb
@@ -1,13 +1,12 @@
 <% remote_form_for( :oauth_iwiw_api, 
      :url => call_iwiw_api_path, 
      :html => { :method => :post, :format => :json }, 
-     :update => 'oauth_iwiw_api_result',
-     :complete => <<-JAVASCRIPT
+#     :update => 'oauth_iwiw_api_result',
+     :success => <<-JAVASCRIPT
      if (typeof JSON != 'undefined') {
         try {
-          var json = document.getElementById('oauth_iwiw_api_result');
-          var data = JSON.parse(json.innerHTML);
-          json.innerHTML = JSON.stringify(data, null, 3);
+          var data = JSON.parse(transport.responseText);
+	  document.getElementById('oauth_iwiw_api_result').innerHTML = JSON.stringify(data, null, 3);
         } catch (e) {
         }
       }
