--- a/app/views/iwiw_users/_call_iwiw_api.html.erb
+++ b/app/views/iwiw_users/_call_iwiw_api.html.erb
@@ -1,16 +1,30 @@
+<% on_success = <<-JAVASCRIPT
+     if (typeof JSON != 'undefined') {
+	var responseBodyElement = document.getElementById('oauth_iwiw_api_result');
+	try {
+	  var data = JSON.parse(request.responseText);
+	  responseBodyElement.innerHTML = JSON.stringify(data, null, 3);
+	} catch (e) {
+	  responseBodyElement.innerHTML = request.responseText;
+	}
+      }
+JAVASCRIPT
+   on_failure = <<-JAVASCRIPT
+     var responseBodyElement = document.getElementById('oauth_iwiw_api_result');
+     try {
+	 responseBodyElement = 'HTTP ' + request.status + ' ' + request.statusText;
+     } catch(e) {
+	 responseBodyElement = e.toString();
+     }
+JAVASCRIPT
+%>
+
+
 <% remote_form_for( :oauth_iwiw_api, 
      :url => call_iwiw_api_path, 
      :html => { :method => :post, :format => :json }, 
-     :success => <<-JAVASCRIPT
-     if (typeof JSON != 'undefined') {
-        try {
-          var data = JSON.parse(request.responseText);
-	  document.getElementById('oauth_iwiw_api_result').innerHTML = JSON.stringify(data, null, 3);
-        } catch (e) {
-        }
-      }
-     JAVASCRIPT
-                  ) do |f| %>
+     :success => on_success, 
+     :failure => on_failure ) do |f| %>
 
   <h1>Rest iWiW API hívás</h1>
 
